[gd_scene load_steps=4 format=4 uid="uid://bcy6nhsn5acy7"]

[ext_resource type="Script" uid="uid://dumj468bj3xwj" path="res://Prefab/GUI/LevelEditor/Inspector/LevelEditorInspector.gd" id="1"]
[ext_resource type="Script" uid="uid://b4cles1jcgbqh" path="res://Prefab/GUI/LevelEditor/Inspector/Properties/PropertiesBox.gd" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gx17m"]
bg_color = Color(0.0430392, 0.0430392, 0.0430392, 1)

[node name="LevelEditorInspector" type="PanelContainer"]
offset_right = 356.0
offset_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gx17m")

[node name="TitleLabel" type="Label" parent="VBoxContainer/PanelContainer2"]
unique_name_in_owner = true
light_mask = 0
layout_mode = 2
text = "检查器"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
light_mask = 0
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer"]
light_mask = 0
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
scroll_deadzone = 20

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer/ScrollContainer"]
light_mask = 0
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="PropertiesBox" type="VBoxContainer" parent="VBoxContainer/PanelContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
light_mask = 0
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2")

[connection signal="value_changed" from="VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/PropertiesBox" to="." method="ChangeValue"]
